kubernetes/rocketmq/4.2.0/rocketmq-broker-deployment.yaml
apiVersion: apps/v1beta2 # for versions after 1.9.0 use apps/v1
kind: Deployment
metadata:
  name: rocketmq-broker
spec:
  selector:
    matchLabels:
      app: rocketmq-broker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rocketmq-broker
    spec:
      containers:
      - image: yeshuangming/rocketmq-broker:4.2.0
        name: rocketmq-broker
        ports:
        - containerPort: 10909
        - containerPort: 10911
