kubernetes/rocketmq/4.2.0/rocketmq-broker-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rocketmq-broker
spec:
  containers:
  - image: yeshuangming/rocketmq-broker:4.2.0
    name: rocketmq-broker
    command: ["/bin/sh"]
    args: [""]
    stdin: true
    tty: true
    ports:
    - containerPort: 10909
    - containerPort: 10911
  restartPolicy: Never
