kubernetes/rocketmq/4.2.0/rocketmq-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketmq-console
spec:
  ports:
  - port: 8080
  selector:
    app: rocketmq-console
#  type: LoadBalancer
  type: ClusterIP
