kubernetes/rocketmq/4.2.0/rocketmq-namesrv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketmq-namesrv
spec:
  ports:
  - port: 9876
  selector:
    app: rocketmq-namesrv
#  type: LoadBalancer
  type: ClusterIP
