kubernetes/rocketmq/4.2.0/rocketmq-console-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rocketmq
spec:
  rules:
  - host: rocketmq.dev-k8s.xxx.com
    http:
      paths:
      - backend:
          serviceName: rocketmq-console
          servicePort: 8080
